# Zimi

./: .gitignore  .secrets-allowlist  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  PLAN.md  README.md  RELEASE_NOTES_v1.6.md  RELEASE_VALIDATION_v1.6.md  RELEASING.md  THIRD_PARTY_NOTICES.md  appcast-arm64.xml  appcast-intel.xml  appcast.xml  deploy.sh  docker-compose.nas.yml  docker-compose.yml  playwright.config.mjs  pyproject.toml  requirements-desktop.txt  requirements.txt  rthook_pythonnet.py  search-results.yml  tests.py  zimi.py  zimi_desktop.py  zimi_desktop.spec  zimi_mcp.py
.github/workflows/: auto-release.yml  desktop-release.yml  docker-publish.yml  publish-release.yml
assets/: generate_icons.py
ci/: bundle_aria2_macos.sh  smoke_binary.sh
docs/: deployment-networking.md  release-notes-1.7.0.md
docs/integrations/: openwebui.md  searxng.md
docs/plans/: 2026-03-05-language-experience.md  2026-04-25-reach-pro-release.md  2026-04-26-accessibility.md  2026-04-26-p2p-torrent-sharing.md  2026-05-08-efficient-startup.md  2026-05-11-v17-nightly-validation.md  2026-05-30-lan-peer-sharing.md  2026-05-30-v17-ship-plan.md  2026-05-30-v17-state-of-play.md  2026-06-21-v17-manual-ui-checklist.md  2026-07-15-v172-backlog-blitz.md  2026-07-19-v174.md  2026-07-20-almanac-polish.md  p2p-feasibility.md
scripts/: bench_memory.py  bench_real.py  bench_startup.py  bench_user_facing.py
snap/: snapcraft.yaml
templates/: index.html
tests/: conftest_zim.py  screenshots.mjs  test_a11y_rewriter.py  test_activity_endpoint.py  test_article_languages.py  test_bt_attempt.py  test_bt_seeding.py  test_bt_url_resolve.py  test_catalog_hierarchy.py  test_catalog_lang_filter.py  test_check_updates_flavor.py  test_concurrency_real_zim.py  test_dl_source.py  test_download_batch.py  test_download_queue.py  test_hot_cache.py  test_http_seed.py  test_i18n_parity.py  test_iframe_link_chaperon.py  test_index_staleness.py  test_interlang.mjs  test_loadavg_throttle.py  test_mirror_mode.py  test_new_zim.py  test_offline_mode.py  test_p2p.py  test_p2p_discovery.py  test_p2p_nat.py  test_password_flow.mjs  test_peer_download.py  test_peer_file_serve.py  test_peer_list_proxy.py  test_score_stability.py  test_search_category.py  test_seeding_endpoint.py  test_serve_smoke.py  test_server.py  test_startup_serial.py  test_stats_endpoint.py  test_tabs.mjs  (+4 more)
zimi/: a11y.py  catalog_hierarchy.py  http.py  interlang.py  library.py  manage.py  mcp_server.py  p2p.py  p2p_discovery.py  p2p_nat.py  previews.py  search.py  server.py
zimi/assets/: generate_icons.py  icon.icns
zimi/static/: almanac-orrery.js  almanac-sky.js  almanac.css  almanac.js  app.css  (+4 more)
(+33 files in other folders)
