[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zimi"
version = "1.6.5"
description = "Offline knowledge server for ZIM files"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "libzim>=3.1.0",
    "certifi>=2024.1.1",
]

[project.optional-dependencies]
pdf = ["PyMuPDF>=1.23.0"]
mcp = ["mcp>=1.0.0"]
all = ["PyMuPDF>=1.23.0", "mcp>=1.0.0"]

[project.scripts]
zimi = "zimi.server:main"

[project.urls]
Homepage = "https://github.com/epheterson/Zimi"

[tool.setuptools.packages.find]
include = ["zimi*"]

[tool.setuptools.package-data]
zimi = ["templates/**", "static/**", "assets/**"]

[tool.pytest.ini_options]
# test_article_languages is a data-integrity suite — it asserts against real
# Wikipedia interwiki links in the ZIMs on disk. Wikipedia's link graph drifts
# over time, so failures there are signal about ZIM data, not code.
# Run it explicitly with `pytest tests/test_article_languages.py` when needed.
addopts = "--ignore=tests/test_article_languages.py"
