[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zimi"
version = "1.7.1"
description = "Offline knowledge server for ZIM files"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "libzim>=3.1.0",
    "certifi>=2024.1.1",
    # LAN peer discovery (mDNS/Zeroconf). Pure-Python; the peer ZIM-sharing
    # transport runs over plain HTTP so it needs no extra binary. aria2
    # (optional BitTorrent accelerator) is bundled only in the Docker image.
    "zeroconf>=0.130.0",
]

[project.optional-dependencies]
pdf = ["PyMuPDF>=1.23.0"]
mcp = ["mcp>=1.0.0"]
all = ["PyMuPDF>=1.23.0", "mcp>=1.0.0"]

[project.scripts]
zimi = "zimi.server:main"

[project.urls]
Homepage = "https://github.com/epheterson/Zimi"

[tool.setuptools.packages.find]
include = ["zimi*"]

[tool.setuptools.package-data]
zimi = ["templates/**", "static/**", "assets/**"]

[tool.pytest.ini_options]
# test_article_languages is a data-integrity suite — it asserts against real
# Wikipedia interwiki links in the ZIMs on disk. Wikipedia's link graph drifts
# over time, so failures there are signal about ZIM data, not code.
# Run it explicitly with `pytest tests/test_article_languages.py` when needed.
addopts = "--ignore=tests/test_article_languages.py"
markers = [
    "real_aria2: opts a test out of the autouse find_aria2c=None guard (may spawn a live aria2c sidecar)",
]
